--- a/Image_classification_Ann.ipynb
+++ b/Image_classification_Ann.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPLwwCCn45EuukyDFP50z24",
+      "authorship_tag": "ABX9TyPOySKf1IPEzlc1KPSxHQeS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -797,7 +797,7 @@
       "metadata": {
         "id": "4-t4z2oRXdQQ"
       },
-      "execution_count": 27,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -822,16 +822,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZzFo_u36XDV3",
-        "outputId": "f40fa8cc-0446-4b5f-d413-15b4ed93e6df"
+        "outputId": "6fc6d631-c7c3-4ac8-e878-2c3cb0152b33"
       },
-      "execution_count": 32,
+      "execution_count": 37,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/reshaping/flatten.py:37: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(**kwargs)\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m135s\u001b[0m 86ms/step - accuracy: 0.3041 - loss: 1.9284\n",
-            "2min 23s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m116s\u001b[0m 74ms/step - accuracy: 0.3062 - loss: 1.9316\n",
+            "1min 57s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
           ]
         }
       ]
@@ -849,16 +857,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7jY-6XTuZS3O",
-        "outputId": "efc612de-70e1-4170-bf2c-e1cceb90e29a"
+        "outputId": "3676dd5d-38ad-4dc0-ee70-eeca4f6c6936"
       },
-      "execution_count": 33,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 4ms/step - accuracy: 0.3054 - loss: 1.9343\n",
-            "8.64 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+            "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 4ms/step - accuracy: 0.3040 - loss: 1.9306\n",
+            "8.38 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
           ]
         }
       ]
@@ -986,7 +994,7 @@
       "source": [
         "data = pd.DataFrame({'Epochs':[1,10],\n",
         "                     'CPU':['2min 23s','22min 5s' ],\n",
-        "                     'GPU':['8.64 s','1min 26s']})\n",
+        "                     'GPU':['8.38 s','1min 57s']})\n",
         "data"
       ],
       "metadata": {
@@ -995,21 +1003,21 @@
           "height": 125
         },
         "id": "SiTMC3kpmeZF",
-        "outputId": "a223d4bc-8f99-4da2-ab5d-ef4d39053ac8"
+        "outputId": "8b9bc301-6fea-45f4-b263-e4a37f4e7bd1"
       },
-      "execution_count": 35,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "   Epochs       CPU       GPU\n",
-              "0       1  2min 23s    8.64 s\n",
-              "1      10  22min 5s  1min 26s"
+              "0       1  2min 23s    8.38 s\n",
+              "1      10  22min 5s  1min 57s"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b4ec45d0-7f37-4f84-9cf4-eb492f5069b3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2f2c8612-1090-41c8-bd27-8b2d3dfbe8e1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1038,13 +1046,13 @@
               "      <th>0</th>\n",
               "      <td>1</td>\n",
               "      <td>2min 23s</td>\n",
-              "      <td>8.64 s</td>\n",
+              "      <td>8.38 s</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>10</td>\n",
               "      <td>22min 5s</td>\n",
-              "      <td>1min 26s</td>\n",
+              "      <td>1min 57s</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1052,7 +1060,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b4ec45d0-7f37-4f84-9cf4-eb492f5069b3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f2c8612-1090-41c8-bd27-8b2d3dfbe8e1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1104,12 +1112,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b4ec45d0-7f37-4f84-9cf4-eb492f5069b3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2f2c8612-1090-41c8-bd27-8b2d3dfbe8e1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b4ec45d0-7f37-4f84-9cf4-eb492f5069b3');\n",
+              "        const element = document.querySelector('#df-2f2c8612-1090-41c8-bd27-8b2d3dfbe8e1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1129,8 +1137,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0e88bd72-95de-44ef-b098-cc47d3c07591\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0e88bd72-95de-44ef-b098-cc47d3c07591')\"\n",
+              "<div id=\"df-77857076-0a79-498e-8c26-5f82c479cff5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-77857076-0a79-498e-8c26-5f82c479cff5')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1249,14 +1257,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0e88bd72-95de-44ef-b098-cc47d3c07591 button');\n",
+              "        document.querySelector('#df-77857076-0a79-498e-8c26-5f82c479cff5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_a3b97b36-16d7-410a-ab5a-a1445b423df2\">\n",
+              "  <div id=\"id_5bf88056-c8b5-43a3-baae-19032417a336\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1300,7 +1308,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_a3b97b36-16d7-410a-ab5a-a1445b423df2 button.colab-df-generate');\n",
+              "        document.querySelector('#id_5bf88056-c8b5-43a3-baae-19032417a336 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1317,11 +1325,11 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "data",
-              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"Epochs\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 6,\n        \"min\": 1,\n        \"max\": 10,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          10,\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CPU\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"22min 5s\",\n          \"2min 23s\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"GPU\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"1min 26s\",\n          \"8.64 s\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"Epochs\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 6,\n        \"min\": 1,\n        \"max\": 10,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          10,\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CPU\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"22min 5s\",\n          \"2min 23s\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"GPU\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"1min 57s\",\n          \"8.38 s\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 39
         }
       ]
     }
